--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
   },
   "homepage": "https://github.com/lfelberg/movie-list#readme",
   "dependencies": {
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-stage-0": "^7.0.0",
     "ajv": "^6.5.4",
-    "babel": "^6.23.0",
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-loader": "^8.0.4",
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
     "live-server": "^1.2.0",
@@ -38,11 +41,5 @@
     "underscore": "^1.9.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/preset-env": "^7.1.0",
-    "babel-loader": "^8.0.4",
-    "webpack": "^4.20.2"
   }
 }
