--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "ajv": "^6.5.4",
     "bootstrap": "^4.1.3",
+    "cryptiles": "^4.1.2",
     "jquery": "^3.3.1",
     "live-server": "^1.2.0",
     "popper": "^1.0.1",
